--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,9 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">360FloatWindowDemo</string>
+    <string name="app_name">APP测试助手</string>
     <string name="action_settings">Settings</string>
-    <string name="hello_world">Hello world!</string>
-    <string name="title_activity_setting">SettingActivity</string>
+    <string name="title_activity_setting">APP测试助手</string>
 
 </resources>
